Create cashflow transaction and new supabase table

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,6 +28,7 @@
                 <li><a class="nav-link" href="{{ url_for('delivery.delivery_order') }}"><i class="bi bi-truck"></i> Delivery</a></li>
                 <li><a class="nav-link" href="{{ url_for('customers.customers_page') }}"><i class="bi bi-truck"></i> Customers</a></li>
                 <li><a class="nav-link" href="{{ url_for('cashflow.cashflow_create') }}"><i class="bi bi-truck"></i> Insert Cashflow</a></li>
+                <li><a class="nav-link" href="{{ url_for('cashflow.cashflow_transactions') }}"><i class="bi bi-truck"></i> Cashflow</a></li>
 
             </ul>
             </div>
